<resources>
    <string name="app_name">Login: Sci High</string>
    <string name="edit_message">e-Mail</string>
    <string name="button_send">Login</string>
    <string name="Password">Password</string>
    <string name="new_reg_email">e-Mail</string>
    <string name="new_reg_password">Password</string>
    <string name="new_reg_conf_password">Confirm Password</string>
    <string name="todo">TODO</string>
    <string name="bienvenidos">Bienvenidos</string>
</resources>