<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_background"
    tools:context=".ValidateAccount">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="158dp"
        android:layout_height="74dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/log2" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/new_reg_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="87dp"
        android:ems="10"
        android:hint="@string/new_reg_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btn_newReg"
        android:layout_width="190dp"
        android:layout_height="55dp"
        android:layout_marginTop="56dp"
        android:text="Registrar"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3"
        app:layout_constraintVertical_bias="0.056"
        android:onClick="POST_User"/>

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/new_reg_conf_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="277dp"
        android:layout_height="44dp"
        android:layout_marginTop="60dp"
        android:text="Nuevo registro"
        android:textColor="#448AFF"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

</androidx.constraintlayout.widget.ConstraintLayout>